# signum-ensemble

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  pyproject.toml  run_live_bot.sh
dashboard/: components.json  package.json  pnpm-lock.yaml
dashboard/app/: layout.tsx  page.tsx
dashboard/hooks/: index.ts  useComparisonData.ts  useKeyboardShortcuts.ts  useSessionPoints.ts
dashboard/lib/: api.ts  chart-configs.ts  market-utils.ts  types.ts
dashboard/types/: dashboard.ts
deploy/: VPS_DEPLOYMENT.md  signum-bot.service
docs/: AUDIT_REPORT.md  AUDIT_ROUND_4.md  IMPROVEMENT_PLAN.md  PAPER_TRADING_READINESS.md
examples/: dry_run.py  live_bot.py  market_closed_dashboard.py  paper_trading_tracker.py  portfolio_growth_strategy.py
python/alpha/: conformal.py  ensemble.py  explainability.py  feature_stability.py  features.py  mean_reversion.py  meta_labeling.py  model.py  online_learning.py  predict.py  tft_model.py  train.py
python/backtest/: cpcv.py  purged_cv.py  regime_analysis.py  robustness.py  run.py  validation.py  walk_forward.py
python/bridge/: bl_views.py  execution.py  simulated_exchange.py
python/brokers/: alpaca_broker.py  base.py
python/data/: config.py  ingestion.py  sectors.py  store.py
python/execution/: algorithms.py
python/monitoring/: alerting.py  dashboard.py  drift.py  hmm_regime.py  regime.py  telegram_cmd.py
python/portfolio/: blend_optimizer.py  brinson_attribution.py  drawdown_control.py  risk.py  (+5 more)
tests/: conftest.py  test_circuit_breaker.py  test_integration.py  test_live_bot_helpers.py  test_live_integration.py
(+47 files in other folders)
