[project]
name = "quant-platform"
version = "0.1.0"
description = "Quantitative equity platform: ML alpha, portfolio optimization, and execution"
requires-python = ">=3.11, <3.12"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "lightgbm>=4.0",
    "catboost>=1.2",
    "yfinance>=0.2",
    "lxml>=4.9",
    "sqlalchemy>=2.0",
    "mlflow>=2.10",
    "plotly>=5.18",
    "dash>=2.14",
]

[project.optional-dependencies]
ml = [
    "pyqlib>=0.9",
    "pytorch-forecasting>=1.0",
    "torch>=2.1",
    "lightning>=2.1",
]
portfolio = [
    "skfolio>=0.4",
    "cvxpy>=1.4",
    "riskfolio-lib>=6.0",
]
monitoring = [
    "evidently>=0.4",
    "shap>=0.43",
]
infra = [
    "psycopg2-binary>=2.9",
    "redis>=5.0",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.3",
]
all = ["quant-platform[ml,portfolio,monitoring,infra,dev]"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["python*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = ["network: tests that require network access"]
